--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^1.3.0",
+    "body-parser": "^1.20.1",
     "compression": "^1.7.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "openai": "^3.1.0",
     "react": "^18.2.0",
